--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,6 +7,12 @@ $color-purple-transparent: rgba(47, 44, 150, 0.356);
 $color-black-transparent: rgba(0, 0, 0, 0.466);
 $color-black-transparent-text: rgba(35, 36, 39, 0.40);
 $color-light-transparent: #fff7e1b7;
+$color-orange-transparent: rgba(250, 72, 45, 0.658);
+$color-green-transparent: #00a979a1;
+
+$color-orange-transparent-low: rgba(250, 72, 45, 0.76);
+$color-green-transparent-low: #00a979be;
+
 $color-white:#FFF;
 
 //////////////////////////////////////
