--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import './pages/_blog.scss';
 @import './pages/_testimonials.scss';
 
+@import './components/_alert.scss';
 @import './components/_overlaying-navigation.scss';
 @import './components/_button.scss'; 
 @import './components/_menu.scss';              
