--- a/sass/components/_paragraph.scss
+++ b/sass/components/_paragraph.scss
@@ -22,7 +22,7 @@
         letter-spacing:2px;
 
         &--helvetica{
-            font-size: $text-small-med-med;
+            font-size: $text-helvetica-small-med-med;
             font-weight: 400;
             font-family: 'Helvetica';
             letter-spacing: 0.64px;
