--- a/css/style.css
+++ b/css/style.css
@@ -3254,6 +3254,11 @@ img.gallery-case__image {
       padding-bottom: 15rem; }
     .zigzag-container__item:nth-child(odd) {
       flex-direction: row; }
+      .zigzag-container__item:nth-child(odd) .zigzag-container__image {
+        filter: drop-shadow(30px 15px 6px #2f2c96); }
+        @media only screen and (max-width: 37.5em) {
+          .zigzag-container__item:nth-child(odd) .zigzag-container__image {
+            filter: drop-shadow(0px 10px 12px #2f2c96); } }
       .zigzag-container__item:nth-child(odd) .zigzag-container__item-description {
         text-align: end;
         align-items: end; }
@@ -3262,6 +3267,11 @@ img.gallery-case__image {
           flex-direction: column; } }
     .zigzag-container__item:nth-child(even) {
       flex-direction: row-reverse; }
+      .zigzag-container__item:nth-child(even) .zigzag-container__image {
+        filter: drop-shadow(-30px -15px 6px #2f2c96); }
+        @media only screen and (max-width: 37.5em) {
+          .zigzag-container__item:nth-child(even) .zigzag-container__image {
+            filter: drop-shadow(0px 10px 12px #2f2c96); } }
       .zigzag-container__item:nth-child(even) .zigzag-container__item-description {
         align-items: start;
         text-align: start; }
