--- a/sass/components/_zigzag-container.scss
+++ b/sass/components/_zigzag-container.scss
@@ -2,6 +2,28 @@
     display:flex;
     align-items: center;
     flex-direction: column;
+
+    &--with-image-shadows{
+        .zigzag-container__item{
+            &:nth-child(odd){
+                .zigzag-container__image{
+                    filter: drop-shadow(30px 15px 6px $color-purple);
+                    @include respond('phone'){
+                        filter: drop-shadow(0px 10px 12px $color-purple);
+                    }
+                }
+            }
+
+            &:nth-child(even){
+                .zigzag-container__image{
+                    filter: drop-shadow(-30px -15px 6px $color-purple);
+                    @include respond('phone'){
+                        filter: drop-shadow(0px 10px 12px $color-purple);
+                    }
+                }
+            }
+        }
+    }
     
     &__item{
         display:flex;
@@ -11,12 +33,6 @@
         }
 
         &:nth-child(odd){
-            .zigzag-container__image{
-                filter: drop-shadow(30px 15px 6px $color-purple);
-                @include respond('phone'){
-                    filter: drop-shadow(0px 10px 12px $color-purple);
-                }
-            }
             flex-direction: row;
             .zigzag-container__item-description{
                 text-align:end;
@@ -35,12 +51,7 @@
         }
         
         &:nth-child(even){
-            .zigzag-container__image{
-                filter: drop-shadow(-30px -15px 6px $color-purple);
-                @include respond('phone'){
-                    filter: drop-shadow(0px 10px 12px $color-purple);
-                }
-            }
+
             flex-direction: row-reverse;
             .zigzag-container__item-description{
                 align-items:start;
