--- a/css/style.css
+++ b/css/style.css
@@ -860,6 +860,9 @@ footer.footer {
     font-size: 3.6rem;
     letter-spacing: 3px;
     padding: 0.6rem 3rem; }
+    @media only screen and (max-width: 64em) {
+      .footer__button.footer__link {
+        padding-top: 0.9rem; } }
   .footer__button:hover {
     color: #FFF7E1;
     background-color: #fa492d; }
@@ -2334,6 +2337,9 @@ img.gallery-case__image {
   outline: none;
   border: none;
   transition: all .2s; }
+  @media only screen and (max-width: 64em) {
+    .button {
+      padding: 0.9rem 1.7rem 0.6rem 1.7rem; } }
   .button__text {
     text-decoration: none; }
   .button, .button__text {
@@ -2367,9 +2373,6 @@ img.gallery-case__image {
     @media only screen and (max-width: 56.25em) {
       .button--testimonial {
         font-size: 3.8rem; } }
-  @media only screen and (max-width: 75em) {
-    .button {
-      padding: 0.9rem 1.7rem 0.6rem 1.7rem; } }
 
 .menu {
   margin: 0 auto;
@@ -3254,16 +3257,8 @@ img.gallery-case__image {
   display: flex;
   align-items: center;
   flex-direction: column; }
-  .zigzag-container--with-image-shadows .zigzag-container__item:nth-child(odd) .zigzag-container__image {
-    filter: drop-shadow(30px 15px 6px #2f2c96); }
-    @media only screen and (max-width: 37.5em) {
-      .zigzag-container--with-image-shadows .zigzag-container__item:nth-child(odd) .zigzag-container__image {
-        filter: drop-shadow(0px 10px 12px #2f2c96); } }
-  .zigzag-container--with-image-shadows .zigzag-container__item:nth-child(even) .zigzag-container__image {
-    filter: drop-shadow(-30px -15px 6px #2f2c96); }
-    @media only screen and (max-width: 37.5em) {
-      .zigzag-container--with-image-shadows .zigzag-container__item:nth-child(even) .zigzag-container__image {
-        filter: drop-shadow(0px 10px 12px #2f2c96); } }
+  .zigzag-container--with-image-shadows .zigzag-container__image {
+    filter: drop-shadow(0px 10px 12px #2f2c96); }
   .zigzag-container__item {
     display: flex; }
     .zigzag-container__item:not(:last-child) {
@@ -3337,6 +3332,9 @@ img.gallery-case__image {
       .zigzag-container__button {
         font-size: 3.8rem;
         letter-spacing: 3px; } }
+    @media only screen and (max-width: 64em) {
+      .zigzag-container__button {
+        padding: 0.9rem 2rem 0.7rem 2.4rem; } }
   .zigzag-container__image {
     width: 100%;
     max-height: 50rem;
