--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -168,6 +168,9 @@
             font-size:$text-small;
             letter-spacing: 3px;
             padding:0.6rem 3rem;
+            @include respond('laptop'){
+                padding-top:0.9rem;
+            }
         }
         &:hover{
             color:$color-light;
